feat(main): add main structure

--- a/index.html
+++ b/index.html
@@ -34,5 +34,62 @@
         </nav>
         <hr>
     </header>
+
+    <main>
+        <section class="section">
+            <h1>Featured Posts</h1>
+            <a href=""> More -> </a>
+
+            <div class="article">
+                <img src="img/Rectangle.png" alt="image">
+                <h4>Post Title</h4>
+                <a href=""> Category</a>
+                <span>Author</span>
+                <span> a min ago</span>
+                <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+            </div>
+
+            <div class="article">
+                <img src="img/Rectangle.png" alt="image">
+                <h4>Post Title</h4>
+                <a href=""> Category</a>
+                <span>Author</span>
+                <span> a min ago</span>
+                <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+            </div>
+        </section>
+
+        <section>
+            <h1>Category</h1>
+            <a href=""> More -> </a>
+
+        <div class="article-big">
+            <img src="img/Rectangle.png" alt="image">
+            <h4>Post Title</h4>
+            <a href=""> Category</a>
+            <span>Author</span>
+            <span> a min ago</span>
+            <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+        </div>
+
+        <div class="article-small">
+            <img src="img/Rectangle.png" alt="image">
+            <h4>Post Title</h4>
+            <a href=""> Category</a>
+            <span>Author</span>
+            <span> a min ago</span>
+            <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+        </div>
+
+        <div class="article-small">
+            <img src="img/Rectangle.png" alt="image">
+            <h4>Post Title</h4>
+            <a href=""> Category</a>
+            <span>Author</span>
+            <span> a min ago</span>
+            <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+        </div>
+        </section>
+    </main>
 </body>
 </html>
