feat(footer): add footer structure

--- a/index.html
+++ b/index.html
@@ -91,5 +91,19 @@
         </div>
         </section>
     </main>
+    <footer>
+        <nav>
+        <div>
+            <p class="title-footer">Logo </p>
+        </div>
+        <div class="footer">
+            <a href=""> Additional Link </a>
+            <a href=""> Additional Link </a>
+            <a href=""> Additional Link </a>
+        </div>
+            <span>© Your Company 2022. We love you!</span>
+        </nav>
+    </footer>
+    
 </body>
 </html>
