feat(style): add main styling

--- a/index.html
+++ b/index.html
@@ -21,42 +21,65 @@
             <div>
             <p class="title">Logo </p>
             </div>
+
             <div class="menu">
             <a href=""> Menu </a>
             <a href=""> Menu </a>
             <a href=""> Menu </a>
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Menu </a> <!-- EASTER EGG-->
             </div>
+
             <div class="search">
             <button class="button" type="submit" class="search"> Search </button>
             <input>
             </div>
+
         </nav>
         <hr>
     </header>
 
     <main>
         <section class="section">
+
+            <div class="article-box">
             <h1>Featured Posts</h1>
             <a href=""> More -> </a>
+            </div>
+
+            <div class="article-box">
 
             <div class="article">
                 <img src="img/Rectangle.png" alt="image">
+
+                <div class="box">
                 <h4>Post Title</h4>
                 <a href=""> Category</a>
+                </div>
+
+                <div class="box">
                 <span>Author</span>
                 <span> a min ago</span>
+                </div>
+
                 <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
             </div>
 
             <div class="article">
                 <img src="img/Rectangle.png" alt="image">
+
+                <div class="box">
                 <h4>Post Title</h4>
                 <a href=""> Category</a>
+                </div>
+
+                <div class="box">
                 <span>Author</span>
                 <span> a min ago</span>
+                </div>
+
                 <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
             </div>
+</div>
         </section>
 
         <section>
@@ -65,28 +88,49 @@
 
         <div class="article-big">
             <img src="img/Rectangle.png" alt="image">
+
+        <div class="box">
             <h4>Post Title</h4>
             <a href=""> Category</a>
+        </div>
+
+        <div class="box">
             <span>Author</span>
             <span> a min ago</span>
+        </div>
+
             <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
         </div>
 
         <div class="article-small">
             <img src="img/Rectangle.png" alt="image">
+
+        <div class="box">
             <h4>Post Title</h4>
             <a href=""> Category</a>
+        </div>
+
+        <div class="box">
             <span>Author</span>
             <span> a min ago</span>
+        </div>
+
             <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
         </div>
 
         <div class="article-small">
             <img src="img/Rectangle.png" alt="image">
+
+            <div class="box">
             <h4>Post Title</h4>
             <a href=""> Category</a>
+            </div>
+
+            <div class="box">
             <span>Author</span>
             <span> a min ago</span>
+            </div>
+            
             <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
         </div>
         </section>
