--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     <header>
         <nav>
             <div>
-            <p class="title">Logo </p>
+                <p class="title">Logo </p>
             </div>
 
             <div class="menu">
-            <a href=""> Menu </a>
-            <a href=""> Menu </a>
-            <a href=""> Menu </a>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Menu </a> <!-- EASTER EGG-->
+                <a href=""> Menu </a>
+                <a href=""> Menu </a>
+                <a href=""> Menu </a>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Menu </a> <!-- EASTER EGG-->
             </div>
 
             <div class="search">
-            <button class="button" type="submit" class="search"> Search </button>
-            <input>
+                <button class="button" type="submit" class="search"> Search </button>
+                <input>
             </div>
 
         </nav>
@@ -39,47 +39,58 @@
     </header>
 
     <main>
-        <section class="section">
+        <section class="featured-post">
 
-            <div class="article-box">
-            <h1>Featured Posts</h1>
-            <a href=""> More -> </a>
+            <div class="featured-post_article-box">
+                <h1>Featured Posts</h1>
+                <a href=""> More -> </a>
             </div>
 
-            <div class="article-box">
+            <div class="featured-post_article-box">
 
-            <div class="article">
-                <img src="img/Rectangle.png" alt="image">
+                <div class="article">
 
-                <div class="box">
-                <h4>Post Title</h4>
-                <a href=""> Category</a>
+                    <img src="img/Rectangle.png" alt="image">
+
+                    <div class="featured-post_article-content">
+              
+                        <div class="featured-post_post-title">
+                            <h4>Post Title</h4>
+                            <a href=""> Category</a>
+                        </div>
+
+                        <div class="featured-post_author" >
+                            <span class="span-author">Author</span>
+                            <span class="span-time"> a min ago</span>
+                        </div>
+
+                         <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+
+                    </div>      
                 </div>
 
-                <div class="box">
-                <span>Author</span>
-                <span> a min ago</span>
-                </div>
+                <div class="article">
 
-                <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+                    <img src="img/Rectangle.png" alt="image">
+
+                    <div class="featured-post_article-content">
+              
+                        <div class="featured-post_post-title">
+                            <h4>Post Title</h4>
+                            <a href=""> Category</a>
+                        </div>
+
+                        <div class="featured-post_author" >
+                            <span class="span-author">Author</span>
+                             <span class="span-time"> a min ago</span>
+                        </div>
+
+                         <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+
+                    </div>   
+                </div>
             </div>
 
-            <div class="article">
-                <img src="img/Rectangle.png" alt="image">
-
-                <div class="box">
-                <h4>Post Title</h4>
-                <a href=""> Category</a>
-                </div>
-
-                <div class="box">
-                <span>Author</span>
-                <span> a min ago</span>
-                </div>
-
-                <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
-            </div>
-</div>
         </section>
 
         <section>
@@ -90,11 +101,12 @@
             <img src="img/Rectangle.png" alt="image">
 
         <div class="box">
+
             <h4>Post Title</h4>
             <a href=""> Category</a>
         </div>
 
-        <div class="box">
+        <div>
             <span>Author</span>
             <span> a min ago</span>
         </div>
@@ -110,7 +122,7 @@
             <a href=""> Category</a>
         </div>
 
-        <div class="box">
+        <div>
             <span>Author</span>
             <span> a min ago</span>
         </div>
@@ -126,7 +138,7 @@
             <a href=""> Category</a>
             </div>
 
-            <div class="box">
+            <div>
             <span>Author</span>
             <span> a min ago</span>
             </div>
