fix(link): change font size links

--- a/index.html
+++ b/index.html
@@ -156,7 +156,10 @@
                                 <a href=""> Category</a>
                             </div>
 
-                   
+                            <div class="category_author-small">
+                                <span class="span-author">Author</span>
+                                <span class="span-time"> a min ago</span>
+                            </div>
             
                              <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
                         </div>
